--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Hank Quinlan, Horrible Cop</title>
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/p1Ktj1XWg1Bm/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/blog/css/main.css">
 	</head>
 	<body>
 		<nav>
