--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>This is my first Github Page</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/blog/css/main.css">
 	</head>
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
+        		<li><a href="/">学习强国</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/blog">习近平</a></li>
     		</ul>
 		</nav>
 		<div class="container">
