--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>This is my first Github Page</title>
+		<title>Blog Home Page</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/blog/css/main.css">
 	</head>
